loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:1: error: '(' expected but identifier found.
for compteur1 <- (1 to 10) {
    ^LoopCourse:15: error: illegal start of simple expression
	}
        ^